# hello_esp32c3

./: .cproject  .project  CMakeLists.txt  Cargo.toml  LICENSE  README.md  sdkconfig
.cargo/: config.toml
.github/workflows/: main.yml
components/MattTask/: CMakeLists.txt  MattTask.c
components/MattTask/include/: MattTask.h
main/: CMakeLists.txt  cmd_wifi.c  cmd_wifi.h  hello_world_main.c  http.c  http.h  idf_component.yml
src/: main.rs
